turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:9: error: ')' expected but ';' found.
	if (getCouleurSol() == Color;white){
                                    ^LangtonsAnt:9: error: ';' expected but ')' found.
	if (getCouleurSol() == Color;white){
                                          ^